Bug fix for navbar on mobile view

--- a/CSS/external_Vinicius.css
+++ b/CSS/external_Vinicius.css
@@ -1095,6 +1095,7 @@ section, summary, time, mark, audio, video {
 			#header {
 				background-attachment: scroll;
 				padding: 2.5em 0 0 0;
+				text-align: center;
 			}
 
 				#header .inner {
@@ -1109,25 +1110,12 @@ section, summary, time, mark, audio, video {
 
 				#header h1 {
 					font-size: 1.75em;
+					margin-bottom: 1em;
 				}
 
 				#header hr {
 					top: 1em;
 					margin-bottom: 2.5em;
-				}
-
-			body.homepage #header {
-				min-height: 0;
-				padding: 5.5em 0 5em 0;
-				height: auto;
-			}
-
-				body.homepage #header:before {
-					display: none;
-				}
-
-				body.homepage #header h1 {
-					font-size: 2.5em;
 				}
 
 		/* Nav */
